--- a/apps/default/ads/templates/ads/wallet.html
+++ b/apps/default/ads/templates/ads/wallet.html
@@ -199,7 +199,7 @@ $(document).ready(function() {
 		if ($('#wallet').val() > 0) {
 			var handler = StripeCheckout.configure({
 		        key: "<?php echo $config['stripe_id'];?>",
-		        locale: 'spanish',
+		        locale: 'english',
 		        image: '',
 		        token: function(token) {
 		          $('.confirm--modal--body').html('<i class="fa fa-spin fa-spinner"></i> {{LANG c_payment}}');
