--- a/apps/default/home/templates/home/includes/sidebar.html
+++ b/apps/default/home/templates/home/includes/sidebar.html
@@ -33,7 +33,7 @@
 		
 		<?php if ($config['story_system'] == 'on') { ?>
 			<div class="stories">
-				<h5>{{LANG stories}}
+				<h5>Historias
 					<?php if ($context['stories']) { ?>
 						<span class="create-new-post btn btn-link pull-right" data-type="story"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-plus"><line x1="12" y1="5" x2="12" y2="19"></line><line x1="5" y1="12" x2="19" y2="12"></line></svg>  Añadir Historia</span>
 					<?php } ?>
