--- a/apps/default/main/templates/footer/footer.html
+++ b/apps/default/main/templates/footer/footer.html
@@ -8,7 +8,7 @@
 				<li><a href="<?php echo(pxp_link('about-us')) ?>"  data-ajax="ajax_loading.php?app=terms&apph=terms&page=about-us">{{LANG about}}</a></li>
 				<li><a href="<?php echo(pxp_link('contact_us')) ?>"  data-ajax="ajax_loading.php?app=terms&apph=terms&page=contact_us">{{LANG contact_us}}</a></li>
 				<?php if ($config['user_ads'] == 'on') { ?>
-					<li><a href="{{CONFIG site_url}}/ads" data-ajax="ajax_loading.php?app=ads&apph=ads">{{LANG advertising}}</a></li>
+					<li><a href="{{CONFIG site_url}}/ads" data-ajax="ajax_loading.php?app=ads&apph=ads">Publicidad</a></li>
 				<?php } ?>
 				<li class="dropup">
 					<span class="dropdown-toggle" data-toggle="dropdown">
