--- a/apps/default/main/templates/header/header.html
+++ b/apps/default/main/templates/header/header.html
@@ -46,7 +46,7 @@
                 <li>
                     <form class="form navbar-search">
                         <div class="input">
-                            <input type="text" class="form-control" placeholder="{{LANG search}}.." id="search-users">
+                            <input type="text" class="form-control" placeholder="Buscar.." id="search-users">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-search"><circle cx="11" cy="11" r="8"></circle><line x1="21" y1="21" x2="16.65" y2="16.65"></line></svg>
                             <div class="pp_head_search_loader" id="pp_loader"><div class="speeding_wheel"></div></div>
                         </div>
