--- a/apps/default/main/templates/footer/sidebar-footer.html
+++ b/apps/default/main/templates/footer/sidebar-footer.html
@@ -20,7 +20,7 @@
 		<li><a href="<?php echo(pxp_link('terms-of-use')) ?>" data-ajax="ajax_loading.php?app=terms&apph=terms&page=terms-of-use">{{LANG terms}}</a></li>
 		<li><a href="<?php echo(pxp_link('privacy-and-policy')) ?>"  data-ajax="ajax_loading.php?app=terms&apph=terms&page=privacy-and-policy">{{LANG privacy_and_policy}}</a></li>
 		<li><a href="<?php echo(pxp_link('about-us')) ?>"  data-ajax="ajax_loading.php?app=terms&apph=terms&page=about-us">{{LANG about}}</a></li>
-		<li><a href="<?php echo(pxp_link('contact_us')) ?>"  data-ajax="ajax_loading.php?app=terms&apph=terms&page=contact_us">{{LANG contact_us}}</a></li>
+		<li><a href="<?php echo(pxp_link('contact_us')) ?>"  data-ajax="ajax_loading.php?app=terms&apph=terms&page=contact_us">Contactanos</a></li>
 		<?php if ($config['user_ads'] == 'on') { ?>
 			<li><a href="{{CONFIG site_url}}/ads" data-ajax="ajax_loading.php?app=ads&apph=ads">Publicidad</a></li>
 		<?php } ?>
