--- a/apps/default/account_analytics/templates/account_analytics/index.html
+++ b/apps/default/account_analytics/templates/account_analytics/index.html
@@ -1,9 +1,9 @@
 <div class="settings-page-container content-shadow">
 <div class="page-content sett_avatr_chng">
 	<div class="acc_stats_hdr">
-		<h3 class="pull-left">{{LANG account_analytics}}</h3>
+		<h3 class="pull-left">Análisis de cuentas</h3>
 		<select id="type" name="type" class="form-control pull-right">
-			<option value="today" <?php echo ($context['cat_type'] == 'today') ? 'selected': '';?>>{{LANG today}}</option>
+			<option value="today" <?php echo ($context['cat_type'] == 'today') ? 'selected': '';?>> Hoy</option>
 			<option value="this_week" <?php echo ($context['cat_type'] == 'this_week') ? 'selected': '';?>>{{LANG this_week}}</option>
 			<option value="this_month" <?php echo ($context['cat_type'] == 'this_month') ? 'selected': '';?>>{{LANG this_month}}</option>
 			<option value="this_year" <?php echo ($context['cat_type'] == 'this_year') ? 'selected': '';?>>{{LANG this_year}}</option>
