--- a/apps/default/home/templates/home/includes/post-ad.html
+++ b/apps/default/home/templates/home/includes/post-ad.html
@@ -11,7 +11,7 @@
 					<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-more-vertical"><circle cx="12" cy="12" r="1"></circle><circle cx="12" cy="5" r="1"></circle><circle cx="12" cy="19" r="1"></circle></svg>
 				</span>
 				<ul class="dropdown-menu zoom">
-					<li><a href="{{CONFIG site_url}}/edit_ad/<?php echo($post_data['id']) ?>">{{LANG edit_ad}}</a></li>				
+					<li><a href="{{CONFIG site_url}}/edit_ad/<?php echo($post_data['id']) ?>">Editar Anuncio</a></li>				
 				</ul>
 			</div>
 			<time><a href="javascript:void(0);" target="_blank"><span class="time-ago" title="<?php echo(ToDate($post_data['posted'])) ?>"><?php echo(time2str($post_data['posted'])); ?></span></a></time>
