--- a/apps/default/ads/templates/ads/index.html
+++ b/apps/default/ads/templates/ads/index.html
@@ -5,13 +5,13 @@
 			<table class="table table-striped">
 				<thead>
 					<tr>
-						<th>{{LANG id}}</th>
-						<th>{{LANG company}}</th>
-						<th>{{LANG bidding}}</th>
-						<th>{{LANG clicks}}</th>
-						<th>{{LANG views}}</th>
-						<th>{{LANG status}}</th>
-						<th>{{LANG action}}</th>
+						<th>ID</th>
+						<th>Empresa</th>
+						<th>Ofertas</th>
+						<th>Clics</th>
+						<th>Views</th>
+						<th>Estado</th>
+						<th>Acción</th>
 					</tr>
 				</thead>
 				<tbody id="user-ads">
