--- a/apps/default/ads/templates/ads/list.html
+++ b/apps/default/ads/templates/ads/list.html
@@ -7,9 +7,9 @@
 	<td data-ad-status="<?php echo $context['ad']->id; ?>" width="150">
 		<span>
 			<?php if ($context['ad']->status == 1): ?>
-				{{LANG active}}
+				Activo
 			<?php else: ?>
-				{{LANG not_active}}
+				No activo
 			<?php endif; ?>
 		</span>
 	</td>
