--- a/apps/default/ads/templates/ads/wallet.html
+++ b/apps/default/ads/templates/ads/wallet.html
@@ -7,7 +7,7 @@
 			<div class="col-md-10">
 				<div class="my_wallet_cont">
 					<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="currentColor" d="M20,7V5c0-1.103-0.897-2-2-2H5C3.794,3,2,3.799,2,6v11c0,2.201,1.794,3,3,3h15c1.104,0,2-0.896,2-2V9 C22,7.896,21.104,7,20,7z M4,6c0-0.805,0.55-0.988,1-1h13v2H5.012C4.55,6.988,4,6.805,4,6z M19,15h-2v-3h2V15z"></path></svg> 
-					<h3>{{LANG wallet}}<br><b><?php echo $context['currency_symbol'].$me['wallet']; ?></b></h3>
+					<h3>Billetera<br><b><?php echo $context['currency_symbol'].$me['wallet']; ?></b></h3>
 				</div>
 			</div>
 			<div class="col-md-1"></div>
@@ -16,7 +16,7 @@
 		<div class="row m-0">
 			<div class="col-md-4"></div>
 			<div class="col-md-4">
-			<h5>{{LANG add_money}}</h5>
+			<h5>Agregar dinero</h5>
 			<div class="pp_mat_input">
 			<input required="true" type="number" name="wallet" class="form-control" placeholder="0.00" id="wallet">
 			<span class="bar"></span>
