--- a/apps/default/welcome/templates/welcome/index.html
+++ b/apps/default/welcome/templates/welcome/index.html
@@ -8,22 +8,22 @@
 				<div class="row margin0">
 					<div class="col-md-4 feature_block animated fadeInUpBig">
 						<div class="inner_blck">
-							<b>{{LANG like}}</b>
-							<p>{{LANG welcome_feature_1}}</p>
+							<b>Me gusta</b>
+							<p>Solo dale me gusta a los proyectos que encuentres interesantes, unicos y creativos</p>
 						</div>
 						<div class="inner_svg"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-heart" color="#ff1100"><path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"></path></svg></div>
 					</div>
 					<div class="col-md-4 feature_block animated fadeInUpBig">
 						<div class="inner_blck">
-							<b>{{LANG follow}}</b>
-							<p>{{LANG welcome_feature_2}}</p>
+							<b>Seguir</b>
+							<p>Sigue a los demas grupos, para que no te pierdas nada de su nuevo contenido</p>
 						</div>
 						<div class="inner_svg"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-user-plus" color="#4caf50"><path d="M16 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path><circle cx="8.5" cy="7" r="4"></circle><line x1="20" y1="8" x2="20" y2="14"></line><line x1="23" y1="11" x2="17" y2="11"></line></svg></div>
 					</div>
 					<div class="col-md-4 feature_block animated fadeInUpBig">
 						<div class="inner_blck">
-							<b>{{LANG save}}</b>
-							<p>{{LANG welcome_feature_3}}</p>
+							<b>Guardar</b>
+							<p>Guarda los proyectos que mas te gustaron para que los puedas ver en cualquier momento</p>
 						</div>
 						<div class="inner_svg"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-bookmark" color="#ff9800"><path d="M19 21l-7-5-7 5V5a2 2 0 0 1 2-2h10a2 2 0 0 1 2 2z"></path></svg></div>
 					</div>
@@ -50,22 +50,22 @@
 			</div>
 			
 			<div class="col-sm-6 col-md-4 pp_welcome_sign">
-			<h3>{{LANG sign_in}}</h3>
+			<h3>Registrarse</h3>
 				<div class="signin-alert"></div>
 				<form action="" class="form" id="login">
 					<div class="pp_mat_input">
-						<input class="form-control" type="text" name="username" id="username" placeholder="{{LANG uname_or_email}}" required autofocus />
-						<label for="username">{{LANG uname_or_email}}</label>
+						<input class="form-control" type="text" name="username" id="username" placeholder="Nombre de usuario o correo electrónico" required autofocus />
+						<label for="username">Introduce tu correo electronico</label>
 						<span class="bar"></span>
 					</div>
 
 					<div class="pp_mat_input">
 						<input class="form-control" type="password" name="password" id="password" placeholder="{{LANG ur_password}}" required />
-						<label for="password">{{LANG ur_password}}</label>
+						<label for="password">Introduce tu contraseña</label>
 						<span class="bar"></span>
 					</div>
 					<div class="form-group">
-						<a href="{{CONFIG site_url}}/forgot">{{LANG forgot_ur_passwd}}</a>
+						<a href="{{CONFIG site_url}}/forgot">¿Olvidaste tu contraseña?</a>
 						<ul class="social-login clearfix nav pull-right">
 							<?php if ($config['fb_login'] == 'on') { ?>
 								<li class="facebook"><a href="{{CONFIG site_url}}/social_login.php?provider=Facebook"><svg xmlns="http://www.w3.org/2000/svg" class="feather feather-facebook" width="24" height="24" viewBox="0 0 24 24" fill="#4267b2"><path d="M17,2V2H17V6H15C14.31,6 14,6.81 14,7.5V10H14L17,10V14H14V22H10V14H7V10H10V6A4,4 0 0,1 14,2H17Z" /></svg></a></li>
@@ -86,7 +86,7 @@
 						</ul>
 					</div>
 					
-					<div class="pp_load_loader"><button class="btn btn-info pp_flat_btn" type="submit"><span>{{LANG login}} <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-right"><line x1="5" y1="12" x2="19" y2="12"></line><polyline points="12 5 19 12 12 19"></polyline></svg></span></button></div>
+					<div class="pp_load_loader"><button class="btn btn-info pp_flat_btn" type="submit"><span>Iniciar Sesión<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-right"><line x1="5" y1="12" x2="19" y2="12"></line><polyline points="12 5 19 12 12 19"></polyline></svg></span></button></div>
 
 					<input type="hidden" name="hash" value="<?php echo($context['csrf_token']) ?>">
 				</form>
