--- a/apps/default/explore/templates/explore/people.html
+++ b/apps/default/explore/templates/explore/people.html
@@ -3,8 +3,8 @@
 		<div class="sub__header">
 			<div class="container">
 				<div class="col-md-8">
-					<h4 class="animated fadeInUpBig">{{LANG explore_people}}</h4>
-					<p class="animated fadeInUpBig">{{LANG suggested_people}}</p>
+					<h4 class="animated fadeInUpBig">Explora personas</h4>
+					<p class="animated fadeInUpBig">Gente sugerida a seguir</p>
 				</div>
 				<div class="col-md-4 pp_exp_head_svg text-center hidden-xs hidden-sm">
 					<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-users animated bounceIn"><path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path><circle cx="9" cy="7" r="4"></circle><path d="M23 21v-2a4 4 0 0 0-3-3.87"></path><path d="M16 3.13a4 4 0 0 1 0 7.75"></path></svg>
