--- a/apps/default/explore/templates/explore/tags.html
+++ b/apps/default/explore/templates/explore/tags.html
@@ -6,7 +6,7 @@
 			<?php if ($context['follow']) { ?>
 			<div class="container">
 				<div class="fluid">
-					<h5>{{LANG follow_suggestions}}<a href="<?php echo(pxp_link('explore/people')); ?>" data-ajax="ajax_loading.php?app=explore&apph=people" class="pull-right">{{LANG see_all}} <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-right"><polyline points="9 18 15 12 9 6"></polyline></svg></a>
+					<h5>Sugerencias para ti<a href="<?php echo(pxp_link('explore/people')); ?>" data-ajax="ajax_loading.php?app=explore&apph=people" class="pull-right">{{LANG see_all}} <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-right"><polyline points="9 18 15 12 9 6"></polyline></svg></a>
 					</h5>
 				</div>
 				<div class="owl-carousel" id="follow__suggestions-cr">
@@ -23,7 +23,7 @@
 							</div>
 							<div class="button">
 								<button onclick="follow(<?php echo($user_data['user_id']) ?>,this);">
-						  			<span>{{LANG follow}}</span>
+						  			<span>Seguir</span>
 						  		</button>
 							</div>
 						</div>
