--- a/apps/default/signup/templates/signup/index.html
+++ b/apps/default/signup/templates/signup/index.html
@@ -34,7 +34,7 @@
 					
 					<div class="pp_mat_input">
 						<input required="true" class="form-control" type="email" name="email" id="email" placeholder="{{LANG email_addr}}" />
-						<label for="email">{{LANG email_addr}}</label>
+						<label for="email">Dirección de correo electrónico</label>
 						<span class="bar"></span>
 					</div>
 					
