--- a/apps/default/welcome/templates/welcome/index.html
+++ b/apps/default/welcome/templates/welcome/index.html
@@ -4,7 +4,7 @@
 				<div class="logo">
 					<a href="{{CONFIG site_url}}"><img src="{{CONFIG site_url}}/media/img/logo.{{CONFIG logo_extension}}" width="42px" alt="logo"></a>
 				</div>
-				<h1 class="animated fadeInUpBig">{{LANG welcome_to}}  {{CONFIG site_name}}</h1>
+				<h1 class="animated fadeInUpBig">Bienvenido a la Feria Univalle   {{CONFIG site_name}}</h1>
 				<div class="row margin0">
 					<div class="col-md-4 feature_block animated fadeInUpBig">
 						<div class="inner_blck">
@@ -30,7 +30,7 @@
 				</div>
 				<div class="pp_wel_footer animated fadeInUpBig">
 					<?php if ($config['signup_system'] == 'on') { ?>
-						<a class="btn btn-info btn_register" href="{{CONFIG site_url}}/signup">{{LANG signup_now}}</a>
+						<a class="btn btn-info btn_register" href="{{CONFIG site_url}}/signup">¡Regístrate ahora!</a>
 					<?php } ?>
 					<ul class="lang_select pull-right">
 						<li class="dropup">
@@ -50,7 +50,7 @@
 			</div>
 			
 			<div class="col-sm-6 col-md-4 pp_welcome_sign">
-			<h3>Registrarse</h3>
+			<h3>Introduce tus datos</h3>
 				<div class="signin-alert"></div>
 				<form action="" class="form" id="login">
 					<div class="pp_mat_input">
@@ -60,7 +60,7 @@
 					</div>
 
 					<div class="pp_mat_input">
-						<input class="form-control" type="password" name="password" id="password" placeholder="{{LANG ur_password}}" required />
+						<input class="form-control" type="password" name="password" id="password" placeholder="Tu contraseña" required />
 						<label for="password">Introduce tu contraseña</label>
 						<span class="bar"></span>
 					</div>
