--- a/apps/default/explore/templates/explore/index.html
+++ b/apps/default/explore/templates/explore/index.html
@@ -39,7 +39,7 @@
 							</div>
 							<div class="button">
 								<button onclick="follow(<?php echo($user_data['user_id']) ?>,this);">
-						  			<span>{{LANG </span>
+						  			<span>Seguir</span>
 						  		</button>
 							</div>
 						</div>
