--- a/apps/default/signup/templates/signup/index.html
+++ b/apps/default/signup/templates/signup/index.html
@@ -33,7 +33,7 @@
 					</div>
 					
 					<div class="pp_mat_input">
-						<input required="true" class="form-control" type="email" name="email" id="email" placeholder="{{LANG email_addr}}" />
+						<input required="true" class="form-control" type="email" name="email" id="email" placeholder="Dirección de correo electrónico" />
 						<label for="email">Dirección de correo electrónico</label>
 						<span class="bar"></span>
 					</div>
@@ -45,8 +45,8 @@
 					</div>
 
 					<div class="pp_mat_input">
-						<input required="true" class="form-control show_password" type="password" name="conf_password" id="conf_password" placeholder="{{LANG confirm_passwd}}" />
-						<label for="conf_password">{{LANG confirm_passwd}}</label>
+						<input required="true" class="form-control show_password" type="password" name="conf_password" id="conf_password" placeholder="Confirmar contraseña" />
+						<label for="conf_password">Confirmar contraseña</label>
 						<span class="bar"></span>
 						<div class="icon-wrapper">
 							<span toggle=".show_password" class="field-icon toggle-password">
