--- a/apps/default/welcome/templates/welcome/reset.html
+++ b/apps/default/welcome/templates/welcome/reset.html
@@ -19,8 +19,8 @@
 						
 					</div>
 					<div class="pp_mat_input">
-						<input class="form-control" type="password" name="confirm_passwd" id="confirm_passwd" placeholder="{{LANG confirm_passwd}}" required  />
-						<label for="confirm_passwd">{{LANG confirm_passwd}}</label>
+						<input class="form-control" type="password" name="confirm_passwd" id="confirm_passwd" placeholder="Confirmar contraseña" required  />
+						<label for="confirm_passwd">Confirmar contraseña</label>
 						<span class="bar"></span> 
 						
 					</div>
