--- a/apps/default/settings/templates/settings/includes/delete.html
+++ b/apps/default/settings/templates/settings/includes/delete.html
@@ -13,7 +13,7 @@
 		<div class="pp_mat_input">
 			<input required="true" type="password" name="password" class="form-control">
 			<span class="bar"></span>
-			<label>{{LANG password}}*</label>
+			<label>Confirmar contraseña*</label>
 		</div>
 		<div class="pp_load_loader"><button class="btn btn-info pp_flat_btn" type="submit"><span>{{LANG continue}}</span></button></div>
 		<input type="hidden" name="user_id" value="<?php echo($context['me']['user_id']) ?>">
