--- a/apps/default/settings/templates/settings/index.html
+++ b/apps/default/settings/templates/settings/index.html
@@ -31,7 +31,7 @@
 			</li>
 			<li class="list-group-item pass-hover <?php if($context['page'] == 'password'){ ?>active pass-active<?php } ?>">
 				<a href="{{CONFIG site_url}}/settings/password/<?php echo $context['me']['user_id'] ?>" data-ajax="ajax_loading.php?app=settings&apph=settings&user=<?php echo($context['me']['username']) ?>&page=password">
-					<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-lock"><rect x="3" y="11" width="18" height="11" rx="2" ry="2"></rect><path d="M7 11V7a5 5 0 0 1 10 0v4"></path></svg> {{LANG password}}
+					<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-lock"><rect x="3" y="11" width="18" height="11" rx="2" ry="2"></rect><path d="M7 11V7a5 5 0 0 1 10 0v4"></path></svg> Confirmar contraseña
 				</a>
 			</li>
 			<li class="list-group-item priv-hover <?php if($context['page'] == 'privacy'){ ?>active priv-active<?php } ?>">
