--- a/apps/default/welcome/templates/welcome/index.html
+++ b/apps/default/welcome/templates/welcome/index.html
@@ -4,7 +4,7 @@
 				<div class="logo">
 					<a href="{{CONFIG site_url}}"><img src="{{CONFIG site_url}}/media/img/logo.{{CONFIG logo_extension}}" width="42px" alt="logo"></a>
 				</div>
-				<h1 class="animated fadeInUpBig">Bienvenido a la Feria Univalle   {{CONFIG site_name}}</h1>
+				<h1 class="animated fadeInUpBig">Bienvenido a la Feria Univalle</h1>
 				<div class="row margin0">
 					<div class="col-md-4 feature_block animated fadeInUpBig">
 						<div class="inner_blck">
@@ -35,7 +35,7 @@
 					<ul class="lang_select pull-right">
 						<li class="dropup">
 							<span class="dropdown-toggle" data-toggle="dropdown">
-								<svg fill="#7a7a7a" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg" class="feather feather-translate"><path d="M12.87,15.07L10.33,12.56L10.36,12.53C12.1,10.59 13.34,8.36 14.07,6H17V4H10V2H8V4H1V6H12.17C11.5,7.92 10.44,9.75 9,11.35C8.07,10.32 7.3,9.19 6.69,8H4.69C5.42,9.63 6.42,11.17 7.67,12.56L2.58,17.58L4,19L9,14L12.11,17.11L12.87,15.07M18.5,10H16.5L12,22H14L15.12,19H19.87L21,22H23L18.5,10M15.88,17L17.5,12.67L19.12,17H15.88Z"></path></svg> {{LANG language}}
+								<svg fill="#7a7a7a" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg" class="feather feather-translate"><path d="M12.87,15.07L10.33,12.56L10.36,12.53C12.1,10.59 13.34,8.36 14.07,6H17V4H10V2H8V4H1V6H12.17C11.5,7.92 10.44,9.75 9,11.35C8.07,10.32 7.3,9.19 6.69,8H4.69C5.42,9.63 6.42,11.17 7.67,12.56L2.58,17.58L4,19L9,14L12.11,17.11L12.87,15.07M18.5,10H16.5L12,22H14L15.12,19H19.87L21,22H23L18.5,10M15.88,17L17.5,12.67L19.12,17H15.88Z"></path></svg> Lenguajes
 							</span>
 							<ul class="dropdown-menu">
 								<?php foreach ($context['langs'] as $key => $val) { ?>
