--- a/apps/default/funding/templates/funding/index.html
+++ b/apps/default/funding/templates/funding/index.html
@@ -232,7 +232,7 @@ $(document).ready(function() {
         }
         else{
             scroll2top();
-            $.toast("{{LANG please_fill_fields}}",{
+            $.toast("Por favor, rellene todos los campos obligatorios",{
                 duration: 5000, 
                 type: 'success',
                 align: 'bottom',
@@ -317,7 +317,7 @@ $(document).ready(function() {
         }
         else{
             scroll2top();
-            $.toast("{{LANG please_fill_fields}}",{
+            $.toast("Por favor, rellene todos los campos obligatorios",{
                 duration: 5000, 
                 type: 'success',
                 align: 'bottom',
@@ -355,7 +355,7 @@ $(document).ready(function() {
         }
         else{
             scroll2top();
-            $.toast("{{LANG please_fill_fields}}",{
+            $.toast("Por favor, rellene todos los campos obligatorios",{
                 duration: 5000, 
                 type: 'success',
                 align: 'bottom',
