--- a/apps/default/signup/templates/signup/index.html
+++ b/apps/default/signup/templates/signup/index.html
@@ -39,8 +39,8 @@
 					</div>
 					
 					<div class="pp_mat_input">
-						<input required="true" class="form-control show_password" type="password" name="password" id="password" placeholder="{{LANG password}}" />
-						<label for="password">{{LANG password}}</label>
+						<input required="true" class="form-control show_password" type="password" name="password" id="password" placeholder="Confirmar contraseña" />
+						<label for="password">Confirmar contraseña</label>
 						<span class="bar"></span>
 					</div>
 
