--- a/apps/default/welcome/templates/welcome/index.html
+++ b/apps/default/welcome/templates/welcome/index.html
@@ -145,9 +145,9 @@
 	"theme": "classic",
 	"position": "bottom-left",
 	"content": {
-		"message": "{{LANG website_use_cookies}}",
-		"dismiss": "{{LANG got_it}}",
-			"link": "{{LANG learn_more1}}",
+		"message": "Este sitio web utiliza cookies para garantizarle la mejor experiencia en nuestro sitio web.",
+		"dismiss": "Entendido!",
+			"link": "Leer más",
 			"href": "{{CONFIG site_url}}/privacy-and-policy"
 	}
 	})});
