--- a/apps/default/welcome/templates/welcome/reset.html
+++ b/apps/default/welcome/templates/welcome/reset.html
@@ -13,8 +13,8 @@
 				<div class="signin-alert"></div>
 				<form action="" class="form" id="reset-password">
 					<div class="pp_mat_input">
-						<input class="form-control" type="password" name="password" id="password" placeholder="{{LANG password}}" required autofocus />
-						<label for="password">{{LANG password}}</label>
+						<input class="form-control" type="password" name="password" id="password" placeholder="Confirmar contraseña" required autofocus />
+						<label for="password">Confirmar contraseña</label>
 						<span class="bar"></span>
 						
 					</div>
