--- a/apps/default/edit_funding/templates/edit_funding/index.html
+++ b/apps/default/edit_funding/templates/edit_funding/index.html
@@ -8,7 +8,7 @@
                     <div class="pp_mat_input">
                         <input required="true" type="text" name="title" class="form-control" value="<?php echo($context['fund']->title) ?>">
                         <span class="bar"></span>
-                        <label>{{LANG title}}</label>
+                        <label>Título</label>
                     </div>
                 </div>
                 <div class="col-md-6">
